--- a/test/index.html
+++ b/test/index.html
@@ -12,8 +12,20 @@
   <script src="../node_modules/mocha/mocha.js"></script>
   <script src="../node_modules/chai/chai.js"></script>
   <script src="../index.js"></script>
-  <script>mocha.setup('bdd')</script>
-  <script src="../index.test.js"></script>
-  <script>mocha.run()</script>
+
+  <script>
+    mocha.setup('bdd');
+  </script>
+
+  <script src="index.test.js"></script>
+
+  <script>
+    if (typeof initMochaPhantomJS === 'function') {
+      initMochaPhantomJS();
+    }
+    else {
+      mocha.run();
+    }
+  </script>
 </body>
 </html>
